welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:3: error: not found: value temps1
  return (temps1<0 && temps2>0 ) || (temps1>0 && temps2<0)
          ^icyHot:3: error: not found: value temps2
  return (temps1<0 && temps2>0 ) || (temps1>0 && temps2<0)
                      ^icyHot:3: error: not found: value temps1
  return (temps1<0 && temps2>0 ) || (temps1>0 && temps2<0)
                                     ^icyHot:3: error: not found: value temps2
  return (temps1<0 && temps2>0 ) || (temps1>0 && temps2<0)
                                                 ^