welcome.lessons.welcome.bat.bool1.IcyHot.scala.code
def icyHot(temp1:Int, temp2:Int):Boolean =
{
  return (temps1<0 && temps2>0 ) || (temps1>0 && temps2<0)
}